[package]
name = "inner_fut_issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
curv = { package = "curv-kzen", version = "~0.9", default-features = false }
serde_cbor = "0.11.2"
round-based = { version = "0.1.4" }
multi-party-ecdsa = { git = "https://github.com/ZenGo-X/multi-party-ecdsa.git", branch = "master" }
anyhow = "*"
futures = "0.3.19"
async-stream = "0.3.3"
